# industrial-asset-behavioral-monitoring

./: .buildinfo  .gitattributes  .gitignore  CHANGELOG.md  README.md  genindex.html  index.html  model_a.html  model_b.html  model_c.html  objects.inv  old_README.md  overview.html  py-modindex.html  reproducibility.html  search.html  searchindex.js  semantic_schema.html
.github/workflows/: ci.yml
_modules/: index.html
_modules/iabm/: data_processor.html  main.html  models.html  utils.html
_modules/iabm_behavior/: main.html  sequences.html  utils.html
_modules/iabm_semantics/: main.html  semantics.html  utils.html
_sources/: index.rst.txt  model_a.rst.txt  model_c.rst.txt  reproducibility.rst.txt  semantic_schema.rst.txt
_static/: custom.css
data/: README.md  analogicas_nonans.parquet  digitales.parquet
docs/: Makefile  README.md  conf.py  index.rst  model_b.rst  overview.rst  reproducibility.rst  requirements.txt  user_validation_checklist.md
ontology/: README.md  iabm.ttl
ontology/examples/: wheel_washer.ttl
ontology/queries/: example_queries.rq
src/: README.md
src/Model_A/: README.md  pyproject.toml
src/Model_A/iabm/: __init__.py  data_processor.py  main.py  models.py  utils.py
src/Model_A/locales/en/LC_MESSAGES/: messages.po
src/Model_A/locales/es/LC_MESSAGES/: messages.po
src/Model_A/old/: imputa.py  requirements.txt  secuencias.py  separa_rf.py  separa_rf.txt  separa_rf_predict.py
src/Model_A/src/: data_processor.py  main.py  models.py  utils.py
src/Model_A/tests/: conftest.py  test_cli.py  test_models.py
src/Model_B/: README.md  pyproject.toml
src/Model_B/iabm_behavior/: __init__.py  main.py  sequences.py  utils.py
src/Model_B/locales/en/LC_MESSAGES/: messages.po
src/Model_B/locales/es/LC_MESSAGES/: messages.po
src/Model_B/tests/: conftest.py  test_cli.py  test_sequences.py
src/Model_C/: README.md  pyproject.toml  pytest.ini
src/Model_C/iabm_semantics/: __init__.py  main.py  semantics.py  utils.py
src/Model_C/tests/: conftest.py  test_cli.py  test_semantics.py
src/predictions/Model_A/: predictions_analogicas_nonans.parquet_RF.xlsx  (+4 more)
(+12 files in other folders)
