[tool.poetry]
name = "smart-system-id-a"
version = "0.1.0"
description = "Framework para la identificación de estados operativos en activos industriales mediante IIoT"
authors = ["Antonio Bello-García", "Javier Villalba-Díez", "Ana González-Marcos", "Joaquín Ordieres-Meré"]
license = "MIT"
readme = "README.md"
packages = [{include = "iabm"}]
include = [
    { path = "locales/**/*.po", format = ["sdist", "wheel"] },
    { path = "locales/messages.pot", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.0"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
xgboost = "^2.0.0"
pyarrow = "^14.0.0"  # Esencial para el soporte de archivos Parquet
joblib = "^1.3.0"    # Para el guardado eficiente de modelos
matplotlib = "^3.8.0"
scipy = "^1.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
sphinx = "^7.2.0"    # Para generar la documentación profesional a partir de los docstrings
black = "^23.9.0"    # Formateador de código para mantener el estándar visual

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
industrial-id = "iabm.main:main"
